force-app/main/default/objects/TruckFleet__c/TruckFleet__c.object-meta.xml
<CustomObject>
    <label>Truck/Fleet</label>
    <nameField>
        <displayFormat>TF-{000000}</displayFormat>
        <label>Truck/Fleet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trucks/Fleets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>