force-app/main/default/objects/TruckFleet__c/fields/AdministratorID__c.field-meta.xml
<CustomField>
    <fullName>AdministratorID__c</fullName>
    <label>Administrator ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>