force-app/main/default/objects/TruckFleet__c/fields/AdministratorPassword__c.field-meta.xml
<CustomField>
    <fullName>AdministratorPassword__c</fullName>
    <label>Administrator Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>