force-app/main/default/objects/TruckFleet__c/fields/AssetIdentificationCode__c.field-meta.xml
<CustomField>
    <fullName>AssetIdentificationCode__c</fullName>
    <label>Asset Identification Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>