force-app/main/default/objects/TruckFleet__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trucks_Fleets</relationshipName>
    <type>Lookup</type>
</CustomField>