force-app/main/default/objects/TruckFleet__c/fields/CountryofManufactured__c.field-meta.xml
<CustomField>
    <fullName>CountryofManufactured__c</fullName>
    <label>Country of Manufactured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vietnam</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>