force-app/main/default/objects/TruckFleet__c/fields/Create_Schedule_Maintain__c.field-meta.xml
<CustomField>
    <fullName>Create_Schedule_Maintain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Schedule Maintain</label>
    <type>Checkbox</type>
</CustomField>