force-app/main/default/objects/TruckFleet__c/fields/DateofFirstRegistration__c.field-meta.xml
<CustomField>
    <fullName>DateofFirstRegistration__c</fullName>
    <label>Date of First Registration</label>
    <type>Date</type>
</CustomField>