force-app/main/default/objects/TruckFleet__c/fields/DateofInsuranceExpiry__c.field-meta.xml
<CustomField>
    <fullName>DateofInsuranceExpiry__c</fullName>
    <label>Date of Insurance Expiry</label>
    <type>Date</type>
</CustomField>