force-app/main/default/objects/TruckFleet__c/fields/DateofInsuranceRegistration__c.field-meta.xml
<CustomField>
    <fullName>DateofInsuranceRegistration__c</fullName>
    <label>Date of Insurance Registration</label>
    <type>Date</type>
</CustomField>