force-app/main/default/objects/TruckFleet__c/fields/DateofRegistrationExpiry__c.field-meta.xml
<CustomField>
    <fullName>DateofRegistrationExpiry__c</fullName>
    <label>Date of Registration Expiry</label>
    <type>Date</type>
</CustomField>