force-app/main/default/objects/TruckFleet__c/fields/EngineChassisNumber__c.field-meta.xml
<CustomField>
    <fullName>EngineChassisNumber__c</fullName>
    <label>Engine /Chassis Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>