force-app/main/default/objects/TruckFleet__c/fields/FuelType__c.field-meta.xml
<CustomField>
    <fullName>FuelType__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>