force-app/main/default/objects/TruckFleet__c/fields/IMONumber__c.field-meta.xml
<CustomField>
    <fullName>IMONumber__c</fullName>
    <label>IMO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>