force-app/main/default/objects/TruckFleet__c/fields/ImplementationStatus__c.field-meta.xml
<CustomField>
    <fullName>ImplementationStatus__c</fullName>
    <label>Implementation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Under Procurement</fullName>
            </value>
            <value>
                <fullName>In Operation</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>