force-app/main/default/objects/TruckFleet__c/fields/InsuranceCoverage__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCoverage__c</fullName>
    <label>Insurance Coverage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>