force-app/main/default/objects/TruckFleet__c/fields/LocationforBase__c.field-meta.xml
<CustomField>
    <fullName>LocationforBase__c</fullName>
    <label>Location for Base</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>