force-app/main/default/objects/TruckFleet__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <label>Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>