force-app/main/default/objects/TruckFleet__c/fields/ModelCode__c.field-meta.xml
<CustomField>
    <fullName>ModelCode__c</fullName>
    <label>Model Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>