force-app/main/default/objects/TruckFleet__c/fields/NearestMaintainanceDay__c.field-meta.xml
<CustomField>
    <fullName>NearestMaintainanceDay__c</fullName>
    <label>Nearest Maintainance Day</label>
    <type>Date</type>
</CustomField>