force-app/main/default/objects/TruckFleet__c/fields/PICID__c.field-meta.xml
<CustomField>
    <fullName>PICID__c</fullName>
    <label>P.I.C ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>