force-app/main/default/objects/TruckFleet__c/fields/PlateNumber__c.field-meta.xml
<CustomField>
    <fullName>PlateNumber__c</fullName>
    <label>Plate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>