force-app/main/default/objects/TruckFleet__c/fields/RAM__c.field-meta.xml
<CustomField>
    <fullName>RAM__c</fullName>
    <label>RAM</label>
    <summaryForeignKey>RAM__c.Truck_Fleet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>