force-app/main/default/objects/TruckFleet__c/fields/RegistrationCertificationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationCertificationNumber__c</fullName>
    <label>Registration Certification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>