force-app/main/default/objects/TruckFleet__c/fields/Truck_Status__c.field-meta.xml
<CustomField>
    <fullName>Truck_Status__c</fullName>
    <label>Truck Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Maintain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>