force-app/main/default/objects/TruckFleet__c/fields/TruckFleetAccountID__c.field-meta.xml
<CustomField>
    <fullName>TruckFleetAccountID__c</fullName>
    <label>Truck Fleet Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>