force-app/main/default/objects/TruckFleet__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL CONTAINER TRUCK HEAD</fullName>
            </value>
            <value>
                <fullName>SHASSI</fullName>
            </value>
            <value>
                <fullName>TRUCK</fullName>
            </value>
            <value>
                <fullName>Forklift</fullName>
            </value>
            <value>
                <fullName>Crane</fullName>
            </value>
            <value>
                <fullName>Wrapping Machine</fullName>
            </value>
            <value>
                <fullName>Turntable</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>