force-app/main/default/objects/TruckFleet__c/fields/VesselType__c.field-meta.xml
<CustomField>
    <fullName>VesselType__c</fullName>
    <label>Vessel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Barging</fullName>
            </value>
            <value>
                <fullName>Feeder</fullName>
            </value>
            <value>
                <fullName>Reefer</fullName>
            </value>
            <value>
                <fullName>Ro-Ro</fullName>
            </value>
            <value>
                <fullName>Tugs</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Heavy-lift/Project</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
            <value>
                <fullName>Liquefied Gas</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>