force-app/main/default/objects/TruckFleet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PlateNumber__c</columns>
    <columns>Active__c</columns>
    <columns>TruckType__c</columns>
    <columns>Truck_Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>NearestMaintainanceDay__c</columns>
    <columns>Maintenance__c</columns>
    <columns>Next_Repair_Schedule__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>